Fix #1836 unable to paint on mobile after selecting color Fix splash art not visible on mobile

--- a/css/start_screen.css
+++ b/css/start_screen.css
@@ -300,6 +300,7 @@
 	}
 	#splash_screen .splash_art_slideshow_image {
 		width: 100%;
+		height: 100%;
 		background-size: cover;
 		background-position: center;
 	}
